--- a/list&listgroup.html
+++ b/list&listgroup.html
@@ -10,13 +10,81 @@
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
     <title>Bootstrap List&ListGroup</title>
-    
+
 </head>
 
-<body class="p-5">
+<body class="w-75 mx-auto my-4">
 
-    
+    <ul class="list-unstyled">
+        <li>Lorem ipsum dolor sit amet</li>
+        <li>Lorem ipsum dolor sit amet</li>
+        <li>Lorem ipsum dolor sit amet</li>
+        <li>Lorem ipsum dolor sit amet</li>
+    </ul>
 
+    <br><br>
+
+    <ul class="list-inline">
+        <li class="list-inline-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-inline-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-inline-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-inline-item">Lorem ipsum dolor sit amet</li>
+    </ul>
+
+    <br><br>
+
+    <ul class="list-group w-50">
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+    </ul>
+
+    <br><br>
+
+    <ul class="list-group w-50">
+        <li class="list-group-item active">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item active">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+    </ul>
+
+    <br><br>
+
+    <ul class="list-group w-50">
+        <li class="list-group-item disabled">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item disabled">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+        <li class="list-group-item">Lorem ipsum dolor sit amet</li>
+    </ul>
+
+    <br><br>
+
+    <div class="list-group">
+        <a href="" class="list-group-item list-group-item-action active">Lorem ipsum</a>
+        <a href="" class="list-group-item list-group-item-action disabled">Lorem ipsum</a>
+        <a href="" class="list-group-item list-group-item-action">Lorem ipsum</a>
+        <a href="" class="list-group-item list-group-item-action">Lorem ipsum</a>
+    </div>
+
+    <br><br>
+
+    <ul class="list-group list-group-flush ">
+        <li class="list-group-item">Lorem ipsum dolor</li>
+        <li class="list-group-item">Lorem ipsum dolor</li>
+        <li class="list-group-item">Lorem ipsum dolor</li>
+        <li class="list-group-item">Lorem ipsum dolor</li>
+    </ul>
+
+    <br><br>
+
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-primary">Lorem, ipsum dolor.</li>
+        <li class="list-group-item list-group-item-secondary">Lorem, ipsum dolor.</li>
+        <li class="list-group-item list-group-item-success">Lorem, ipsum dolor.</li>
+        <li class="list-group-item list-group-item-danger">Lorem, ipsum dolor.</li>
+        <li class="list-group-item list-group-item-warning">Lorem, ipsum dolor.</li>
+    </ul>
 
 
 
