--- a/cards.html
+++ b/cards.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
         integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 
-    <title>Bootstrap Cards</title>
+    <title>Cards</title>
 
 </head>
 
@@ -33,7 +33,7 @@
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sapiente beatae maxime
                 odio, similique et eius suscipit nulla omnis facere odit rerum, illum praesentium molestiae distinctio
                 repellendus fugit ipsam nihil!</p>
-                <button class="btn btn-primary float-right">Button</button>
+            <button class="btn btn-primary float-right">Button</button>
         </div>
     </div>
 
@@ -46,14 +46,128 @@
     </div>
 
     <div class="card my-3">
-        <div class="card-header">Header</div>       
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Lorem, ipsum dolor.</li>
-                <li class="list-group-item">Lorem, ipsum dolor.</li>
-                <li class="list-group-item">Lorem, ipsum dolor.</li>
-            </ul>
+        <div class="card-header">Header</div>
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+            <li class="list-group-item">Lorem, ipsum dolor.</li>
+        </ul>
     </div>
 
+    <div class="card my-3">
+        <div class="card-header">Featured</div>
+        <div class="card-body">
+            <h5 class="card-tittle">Lorem ipsum dolor sit amet.</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sapiente beatae maxime
+                odio, similique et eius suscipit nulla omnis facere odit rerum, illum praesentium molestiae distinctio
+                repellendus fugit ipsam nihil!</p>
+            <button class="btn btn-primary float-right">Button</button>
+        </div>
+        <div class="card-footer">2 days ago.</div>
+    </div>
+
+    <div class="card my-3 text-center">
+        <div class="card-header">Featured</div>
+        <div class="card-body">
+            <h5 class="card-tittle">Lorem ipsum dolor sit amet.</h5>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sapiente beatae maxime
+                odio, similique et eius suscipit nulla omnis facere odit rerum, illum praesentium molestiae distinctio
+                repellendus fugit ipsam nihil!</p>
+            <button class="btn btn-primary float-right">Button</button>
+        </div>
+        <div class="card-footer">2 days ago.</div>
+    </div>
+
+    <div class="card my-3 w-25">
+        <img src="img/img4.jfif" class="card-image-top" alt="">
+        <div class="card-body">
+            <h4 class="card-tittle">Gülşah Şahin</h4>
+            <p class="card-text">Lorem, ipsum dolor.</p>
+            <a href="" class="card-link">See Profile</a>
+        </div>
+    </div>
+
+    <div class="card my-3 w-25">
+        <img src="img/img4.jfif" class="card-image-top" alt="">
+        <div class="card-img-overlay">
+            <h4 class="card-tittle">Gülşah Şahin</h4>
+            <p class="card-text">Lorem, ipsum dolor.</p>
+            <a href="" class="card-link">See Profile</a>
+        </div>
+    </div>
+
+    <div class="card-columns my-3">
+        <div class="card bg-primary text-white" style="height: 100px;">
+            <div class="card-body">
+                Lorem ipsum dolor sit amet.
+            </div>
+        </div>
+        <div class="card bg-danger text-white" style="height: 100px;">
+            <div class="card-body">
+                Lorem ipsum dolor sit amet.
+            </div>
+        </div>
+        <div class="card bg-warning text-white" style="height: 100px;">
+            <div class="card-body">
+                Lorem ipsum dolor sit amet.
+            </div>
+        </div>
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                Lorem ipsum dolor sit amet.
+            </div>
+        </div>
+    </div>
+
+    <div class="card-deck">
+        
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="card-group mt-4">
+        
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+
+        <div class="card bg-info text-white" style="height: 100px;">
+            <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet.</p>
+            </div>
+        </div>
+    </div>
 
 
 
