--- a/slider-carousel.html
+++ b/slider-carousel.html
@@ -23,6 +23,7 @@
 
 <body class="container my-4">
 
+    <!-- slider 0 -->
     <div class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -37,6 +38,7 @@
         </div>
     </div>
 
+    <!-- slider 1 -->
     <div id="slider1" class="carousel slide my-5" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -58,7 +60,8 @@
         </a>
     </div>
 
-    <div id="slider2" class="carousel slide my-5" data-ride="carousel">
+    <!-- slider 2 -->
+    <div id="slider2" class="carousel slide carousel-fade my-5" data-ride="carousel">
         <ol class="carousel-indicators">
             <li data-target="#slider2" data-slide-to="0" class="active"></li>
             <li data-target="#slider2" data-slide-to="1"></li>
@@ -67,12 +70,24 @@
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block w-100" src="img/img.jfif" alt="">
+                <div class="carousel-caption">
+                    <h5>Slider Header 1</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, error!</p>
+                </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="img/img2.jfif" alt="">
+                <div class="carousel-caption">
+                    <h5>Slider Header 2</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, error!</p>
+                </div>
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="img/img3.jfif" alt="">
+                <div class="carousel-caption">
+                    <h5>Slider Header 3</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, error!</p>
+                </div>
             </div>
         </div>
 
@@ -83,6 +98,47 @@
             <span class="carousel-control-next-icon"></span>
         </a>
     </div>
+
+    <!-- slider 3 -->
+    <div id="slider3" class="carousel slide carousel-fade my-5">
+        <ol class="carousel-indicators">
+            <li data-target="#slider3" data-slide-to="0" class="active"></li>
+            <li data-target="#slider3" data-slide-to="1"></li>
+            <li data-target="#slider3" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="img/img.jfif" alt="">
+                <!-- d-none d-md-block ile ekran boyutu medium cihaz altında düşünce slider üzerindeki yazılar yok olur -->
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Slider Header 1</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, error!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/img2.jfif" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Slider Header 2</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, error!</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="img/img3.jfif" alt="">
+                <div class="carousel-caption d-none d-md-block">
+                    <h5>Slider Header 3</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit, error!</p>
+                </div>
+            </div>
+        </div>
+
+        <a href="#slider3" class="carousel-control-prev" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a href="#slider3" class="carousel-control-next" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+    </div>
+
 
 
 
@@ -105,6 +161,20 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
         integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
         crossorigin="anonymous"></script>
+
+    <!-- slider 3 script -->
+    <script>
+
+        $(function(){
+            $('#slider3').carousel({
+                interval: 2000,
+                keyword: false, /* mouse üzerinde iken hareketi keser */
+                pause: false,
+                wrap: false, /* son slayttan sonra başa dönmez */
+            });
+        });
+
+    </script>
 
 
 </body>
