--- a/grid_layout.html
+++ b/grid_layout.html
@@ -20,7 +20,72 @@
 
 <body class="container my-4">
 
-    
+    <div class="container my-4">
+
+        <h2 class="my-5">Eşit Kolonlar</h2>
+        <div class="row">
+            <div class="col border">Column</div>
+        </div>
+
+        <div class="row my-2">
+            <div class="col border">Column</div>
+            <div class="col border">Column</div>
+        </div>
+
+        <div class="row my-2">
+            <div class="col border">Column</div>
+            <div class="col border">Column</div>
+            <div class="col border">Column</div>
+        </div>
+
+        <div class="row my-2">
+            <div class="col border">Column</div>
+            <div class="col border">Column</div>
+            <div class="col border">Column</div>
+            <div class="col border">Column</div>
+        </div>
+
+        <h2 class="my-5">Eşit Olmayan Kolonlar</h2>
+        <div class="row">
+            <div class="col-2 border">2 Column</div>
+            <div class="col-10 border">10 Column</div>
+        </div>
+        <div class="row my-2">
+            <div class="col-8 border">8 Column</div>
+            <div class="col-4 border">4 Column</div>
+        </div>
+        <div class="row my-2">
+            <div class="col-5 border">5 Column</div>
+            <div class="col-4 border">4 Column</div>
+        </div>
+        <div class="row my-2">
+            <div class="col-5 border mr-auto">5 Column</div>
+            <div class="col-4 border">4 Column</div>
+        </div>
+        <div class="row my-2">
+            <div class="col-5 border">5 Column</div>
+            <div class="col-4 border ml-auto">4 Column</div>
+        </div>
+
+        <h2 class="my-5">Kolon Sıralama</h2>
+        <div class="row my-2">
+            <div class="col-3 border order-3">3 Column</div>
+            <div class="col-4 border order-2">4 Column</div>
+            <div class="col border order-1">Column</div>
+        </div>
+
+        <h2 class="my-5">İç İçe Kolonlar</h2>
+        <div class="row my-2">
+            <div class="col-4 border">4 Column</div>
+            <div class="col-8 border">8 Column
+                <div class="row">
+                    <div class="col bg-primary">6 Column</div>
+                    <div class="col bg-danger">6 Column</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
     
 
